--- a/ShopTD/Views/Shared/_Layout.cshtml
+++ b/ShopTD/Views/Shared/_Layout.cshtml
@@ -32,8 +32,8 @@
 </head>
 <body>
     @RenderBody()
-
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/popper")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
